/**
 * CSC232 - Data Structures
 * Missouri State University, Spring 2026
 *
 * @file    sort_type.h
 * @author  Jim Daehn <jdaehn@missouristate.edu>
 * @brief   TODO: Fill me accordingly
 * @version 1.0.0
 * @date    3/28/26
 *
 * @copyright Copyright (c) 2026 James R. Daehn
 */

#ifndef LAB11_SORT_TYPE_H
#define LAB11_SORT_TYPE_H
namespace csc232
{
    enum class sort_type
    {
        selection,
        bubble,
        insertion
    };
}
#endif // LAB11_SORT_TYPE_H
